--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       count--;
       if (count == 0) {
         clearInterval(interval);
-        // window.location.href = "https://qachat.vercel.app/"; //要跳转的网站链接
+        window.location.href = "https://qachat.vercel.app/"; //要跳转的网站链接
       } else {
         document.getElementById("countdown").innerHTML = count; //显示倒计时
       }
