--- a/index.html
+++ b/index.html
@@ -8,33 +8,45 @@
         width: 100vw;
       }
       .content {
+        text-align: center;
         width: 100%;
         margin: 100px auto;
+      }
+      a {
+        color: brown;
+        font-size: 30px;
+        font-weight: 700;
       }
     </style>
   </head>
   <body>
     <div class="content">
-      <h1>QAChat 网址已迁移</h1>
+      <h1>QAchat 永久网址</h1>
       <div>
-        本页面将在 <span id="countdown">10</span> 秒后自动跳转到永久链接
-        <a href="https://qachat.vercel.app/">https://qachat.vercel.app/</a>
+        <p style="color: red; font-weight: 700">建议保存此网页作为导航</p>
+
+        <p>
+          QAchat 最新网址
+          <a href="https://a.mydog.buzz" target="_blank"
+            >https://a.mydog.buzz</a
+          >
+        </p>
+        <p>
+          QAchat Pro 最新网址
+          <a href="https://a.qachat.pro" target="_blank"
+            >https://a.qachat.pro</a
+          >
+        </p>
+
+        <p>
+          网站被墙后，会在此导航页同步更新Qachat最新网址，但可能更新不及时，所以提供了备用网址，
+        </p>
+        <p>
+          目前备用网址规则是，按英文字母 a、b、c、d...z 顺序依次尝试，例如
+          b.qachat.pro, b.mydog.buzz
+        </p>
       </div>
-      <p>需要翻墙</p>
-      <p>需要翻墙</p>
-      <p>需要翻墙</p>
     </div>
   </body>
-  <script type="text/javascript">
-    var count = 10; //倒计时秒数
-    var interval = setInterval(function () {
-      count--;
-      if (count == 0) {
-        clearInterval(interval);
-        window.location.href = "https://qachat.vercel.app/"; //要跳转的网站链接
-      } else {
-        document.getElementById("countdown").innerHTML = count; //显示倒计时
-      }
-    }, 1000);
-  </script>
+  <script type="text/javascript"></script>
 </html>
