--- a/index.html
+++ b/index.html
@@ -2,15 +2,18 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>自动跳转页面</title>
+    <title>QAchat 导航页</title>
     <style>
       body {
         width: 100vw;
+        background: #f5e6d8;
       }
       .content {
         text-align: center;
         width: 100%;
-        margin: 100px auto;
+        /* margin: 100px auto; */
+        margin-top: 150px;
+        padding: 30px;
       }
       a {
         color: brown;
@@ -39,11 +42,13 @@
         </p>
 
         <p>
-          网站被墙后，会在此导航页同步更新Qachat最新网址，但可能更新不及时，所以提供了备用网址，
+          网站被墙后，会在此导航页同步更新Qachat最新网址; <br />
+          可能更新不及时，所以提供了备用网址:
         </p>
         <p>
-          目前备用网址规则是，按英文字母 a、b、c、d...z 顺序依次尝试，例如
-          b.qachat.pro, b.mydog.buzz
+          目前备用网址规则是，前缀按英文字母 a、b、c、d...z 顺序依次尝试，
+          <br />
+          例如 b.qachat.pro, b.mydog.buzz
         </p>
       </div>
     </div>
