--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         width: 100%;
         /* margin: 100px auto; */
         margin-top: 150px;
-        padding: 30px;
+/*         padding: 30px; */
       }
       a {
         color: brown;
