--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     <div class="content">
       <p>
         <span id="time">3</span> 秒后跳转到
-        <a href="https://d.aging.run" target="_blank" rel="noopener noreferrer"
+        <a href="https://m.aging.run" target="_blank" rel="noopener noreferrer"
           >AIer</a
         >
       </p>
@@ -188,7 +188,7 @@
       function show() {
         second--;
         if (second == 0) {
-          location.href = "https://d.aging.run";
+          location.href = "https://m.aging.run";
         }
         time.innerHTML = second + "";
       }
